# LLM-Inference

./: .gitignore  README.md
benchmarking/: README.md  pyproject.toml
benchmarking/evaluation/: README.md  agentic_eval.py  evaluate_benchmark.py
benchmarking/testing/brain/: README.md  benchmark_runner.py  replay_analyzer.py  test_gateway.py
benchmarking/testing/querfai/: README.md  benchmark_runner.py
gemma4-e2b/: README.md  docker-compose.yml
gemma4-e2b/gateway/: main.py
gemma4-e4b/: .env.template  README.md  docker-compose.yml  start.sh
gemma4-e4b/gateway/: main.py
ministral3-3b-inst/: README.md
ministral3-3b-inst/sglang/: README.md  docker-compose.yml
ministral3-3b-inst/sglang/gateway/: main.py
ministral3-3b-inst/vllm/: README.md  docker-compose.yml
ministral3-3b-inst/vllm/gateway/: main.py
ministral3-8b-inst/: README.md  docker-compose.yml
ministral3-8b-inst/gateway/: main.py
nemotron3-nano-4b/: README.md
nemotron3-nano-4b/sglang/: README.md  docker-compose.yml  nginx.conf
nemotron3-nano-4b/vllm/: README.md  docker-compose.yml
qwen35-0.8b/: README.md
qwen35-0.8b/sglang/: README.md  docker-compose.yml
qwen35-0.8b/vllm/: README.md  docker-compose.yml
qwen35-2b/: README.md
qwen35-2b/sglang/: README.md  docker-compose.yml
qwen35-2b/vllm/: README.md  docker-compose.yml
qwen35-4b/: README.md
qwen35-4b/sglang/: README.md  docker-compose.yml
qwen35-4b/vllm/: README.md  docker-compose.yml
qwen35-9b/: README.md
qwen35-9b/sglang/: README.md  docker-compose.yml
qwen35-9b/vllm/: README.md  docker-compose.yml
(+11 files in other folders)
